fixed issue with automatic scroll on small and medium screens

--- a/css/medium-screen.css
+++ b/css/medium-screen.css
@@ -53,7 +53,7 @@ label[for=nav-trigger]{
 }
 
 .nav-placeholder {
-	height: 50px;
+	height: 63px;
 }
 
 .parallax{
