--- a/css/small-screen.css
+++ b/css/small-screen.css
@@ -53,7 +53,7 @@ label[for=nav-trigger]{
 }
 
 .nav-placeholder {
-	height: 50px;
+	height: 53px;
 }
 
 .nav-container-small {
